panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__arrays__test_multidimensional_array_as_parameter.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/arrays/test_multidimensional_array_as_parameter.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arrays/test_multidimensional_array_as_parameter.c"
   (function-definition
      f~0 `fn(xs: array<array<int; 2>; 2>) -> int`
      (params
         xs~2 `array<array<int; 2>; 2>`)
      (compound-statement
         (return (add (subscript (subscript (name xs~2 `array<array<int; 2>; 2>`) 0) 0) (subscript (subscript (name xs~2 `array<array<int; 2>; 2>`) 1) 1)))))
   (function-definition
      main~3 `fn() -> int`
      (compound-statement
         (declaration xs~5 `array<array<int; 2>; 2>` ∅)
         (expression (assign (subscript (subscript (name xs~5 `array<array<int; 2>; 2>`) 0) 0) 4))
         (expression (assign (subscript (subscript (name xs~5 `array<array<int; 2>; 2>`) 1) 1) 6))
         (return
            (call (name f~0 `fn(xs: array<array<int; 2>; 2>) -> int`)
               (name xs~5 `array<array<int; 2>; 2>`))))))

----- stderr -----
