panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__arrays__test_single_dimensional_array.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/arrays/test_single_dimensional_array.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arrays/test_single_dimensional_array.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration xs~2 `array<int; 42>` ∅)
         (expression (assign (subscript (name xs~2 `array<int; 42>`) 0) 1))
         (expression (assign (subscript (name xs~2 `array<int; 42>`) 1) 2))
         (expression (assign (subscript (name xs~2 `array<int; 42>`) 41) 3))
         (return (add (subscript (name xs~2 `array<int; 42>`) 1) (subscript (name xs~2 `array<int; 42>`) 41))))))

----- stderr -----
